Gem "eac_rails_gem_support": add '~> 0.9, >= 0.9.2' / replace "eac_ruby_gem_support".

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,3 +1,10 @@
 ---
 inherit_gem:
-  eac_ruby_gem_support: ".rubocop.yml"
+  eac_rails_gem_support: ".rubocop.yml"
+Lint/RedundantCopDisableDirective:
+  Exclude:
+  - app/models/group_permission.rb
+  - spec/models/group_merge_spec.rb
+Lint/SymbolConversion:
+  Exclude:
+  - lib/redmine_nonproject_modules/menu_controller_entry.rb
